--- a/index.html
+++ b/index.html
@@ -214,6 +214,7 @@
         <div id="scr9"><img scr="pic/9.png" alt="scr9" class="center"></div>
         <div id="scr10"><img scr="pic/10.png" alt="scr10" class="center"></div>
         
+        <a href="https://www.hashtagootd.com/" target="_blank"><div id="toootd" class="btn">到#OoTd看看</div></a>
         <div id="backHome" class="btn">Try Again</div>
     </div>
 
