--- a/index.html
+++ b/index.html
@@ -202,17 +202,17 @@
     <div id="end">
         <a href="https://www.hashtagootd.com/" target="_blank"><img src="ootd.jpg" alt="title" class="center"></a>
 
-        <div id="scr0"><img scr="pic/0.png" alt="scr0" class="center"></div>
-        <div id="scr1"><img scr="pic/1.png" alt="scr1" class="center"></div>
-        <div id="scr2"><img scr="pic/2.png" alt="scr2" class="center"></div>
-        <div id="scr3"><img scr="pic/3.png" alt="scr3" class="center"></div>
-        <div id="scr4"><img scr="pic/4.png" alt="scr4" class="center"></div>
-        <div id="scr5"><img scr="pic/5.png" alt="scr5" class="center"></div>
-        <div id="scr6"><img scr="pic/6.png" alt="scr6" class="center"></div>
-        <div id="scr7"><img scr="pic/7.png" alt="scr7" class="center"></div>
-        <div id="scr8"><img scr="pic/8.png" alt="scr8" class="center"></div>
-        <div id="scr9"><img scr="pic/9.png" alt="scr9" class="center"></div>
-        <div id="scr10"><img scr="pic/10.png" alt="scr10" class="center"></div>
+        <div id="scr0"><img src="pic/scr0.png" alt="scr0" class="center"></div>
+        <div id="scr1"><img src="pic/scr1.png" alt="scr1" class="center"></div>
+        <div id="scr2"><img src="pic/scr2.png" alt="scr2" class="center"></div>
+        <div id="scr3"><img src="pic/scr3.png" alt="scr3" class="center"></div>
+        <div id="scr4"><img src="pic/scr4.png" alt="scr4" class="center"></div>
+        <div id="scr5"><img src="pic/scr5.png" alt="scr5" class="center"></div>
+        <div id="scr6"><img src="pic/scr6.png" alt="scr6" class="center"></div>
+        <div id="scr7"><img src="pic/scr7.png" alt="scr7" class="center"></div>
+        <div id="scr8"><img src="pic/scr8.png" alt="scr8" class="center"></div>
+        <div id="scr9"><img src="pic/scr9.png" alt="scr9" class="center"></div>
+        <div id="scr10"><img src="pic/scr10.png" alt="scr10" class="center"></div>
         
         <a href="https://www.hashtagootd.com/" target="_blank"><div id="toootd" class="btn">到#OoTd看看</div></a>
         <div id="backHome" class="btn">Try Again</div>
