--- a/index.html
+++ b/index.html
@@ -72,19 +72,19 @@
     </div>
 
     <div id="q4">
-        <div id="qs">日</div> 
+        <div id="qs">森林系穿搭源自於哪個國家？</div> 
          <div id="ans4">
             <div id="wrongAns" class="ans">
-                Offer Opinion Through Devices
+                歐洲
             </div>
             <div id="wrongAns" class="ans">
-                Orange On The Desk
+                美國
             </div>
             <div id="rightAns4" class="ans">
-                Outfit Of The Day
+                日本
             </div>
             <div id="wrongAns" class="ans">
-                Outlook On The Design
+                韓國
             </div>
         </div>
     </div>
@@ -108,19 +108,19 @@
     </div>
 
     <div id="q6">
-        <div id="qs">日</div> 
+        <div id="qs">日系穿搭大多有什麼特色？</div> 
          <div id="ans6">
             <div id="wrongAns" class="ans">
-                Offer Opinion Through Devices
+                顏色鮮豔亮麗
             </div>
             <div id="wrongAns" class="ans">
-                Orange On The Desk
+                單層次穿搭
             </div>
-            <div id="rightAns6" class="ans">
-                Outfit Of The Day
+            <div id="wrongAns6" class="ans">
+                緊身性感
             </div>
-            <div id="wrongAns" class="ans">
-                Outlook On The Design
+            <div id="rightAns" class="ans">
+                寬鬆飄逸
             </div>
         </div>
     </div>
@@ -144,19 +144,19 @@
     </div>
 
     <div id="q8">
-        <div id="qs">日</div> 
+        <div id="qs">OL是下列何者的簡稱？</div> 
          <div id="ans8">
-            <div id="wrongAns" class="ans">
-                Offer Opinion Through Devices
+            <div id="rightAns" class="ans">
+                Office Lady
             </div>
             <div id="wrongAns" class="ans">
-                Orange On The Desk
+                Orange Lazy
             </div>
-            <div id="rightAns8" class="ans">
-                Outfit Of The Day
+            <div id="wrongAns8" class="ans">
+                Over Leaking
             </div>
             <div id="wrongAns" class="ans">
-                Outlook On The Design
+                Olive Land
             </div>
         </div>
     </div>
