--- a/index.html
+++ b/index.html
@@ -54,19 +54,19 @@
     </div>
 
     <div id="q3">
-        <div id="qs">歐美</div> 
+        <div id="qs">Chanel創立於哪個國家?</div> 
          <div id="ans3">
             <div id="wrongAns" class="ans">
-                Offer Opinion Through Devices
+                義大利
+            </div>
+            <div id="rightAns" class="ans">
+                法國
+            </div>
+            <div id="wrongAns3" class="ans">
+                英國
             </div>
             <div id="wrongAns" class="ans">
-                Orange On The Desk
-            </div>
-            <div id="rightAns3" class="ans">
-                Outfit Of The Day
-            </div>
-            <div id="wrongAns" class="ans">
-                Outlook On The Design
+                美國
             </div>
         </div>
     </div>
@@ -90,19 +90,19 @@
     </div>
 
     <div id="q5">
-        <div id="qs">歐美</div> 
+        <div id="qs">以下哪個品牌以歐美風格為主?</div> 
          <div id="ans5">
             <div id="wrongAns" class="ans">
-                Offer Opinion Through Devices
+                GU
             </div>
             <div id="wrongAns" class="ans">
-                Orange On The Desk
+                Air Space
             </div>
             <div id="rightAns5" class="ans">
-                Outfit Of The Day
+                Pull & Bear
             </div>
             <div id="wrongAns" class="ans">
-                Outlook On The Design
+                Ambler
             </div>
         </div>
     </div>
