--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
             <div id="wrongAns" class="ans">
                 義大利
             </div>
-            <div id="rightAns" class="ans">
+            <div id="rightAns3" class="ans">
                 法國
             </div>
-            <div id="wrongAns3" class="ans">
+            <div id="wrongAns" class="ans">
                 英國
             </div>
             <div id="wrongAns" class="ans">
@@ -116,10 +116,10 @@
             <div id="wrongAns" class="ans">
                 單層次穿搭
             </div>
-            <div id="wrongAns6" class="ans">
+            <div id="wrongAns" class="ans">
                 緊身性感
             </div>
-            <div id="rightAns" class="ans">
+            <div id="rightAns6" class="ans">
                 寬鬆飄逸
             </div>
         </div>
@@ -146,13 +146,13 @@
     <div id="q8">
         <div id="qs">OL是下列何者的簡稱？</div> 
          <div id="ans8">
-            <div id="rightAns" class="ans">
+            <div id="rightAns8" class="ans">
                 Office Lady
             </div>
             <div id="wrongAns" class="ans">
                 Orange Lazy
             </div>
-            <div id="wrongAns8" class="ans">
+            <div id="wrongAns" class="ans">
                 Over Leaking
             </div>
             <div id="wrongAns" class="ans">
@@ -169,10 +169,10 @@
             <div id="wrongAns" class="ans">
                 H&M
             </div>
-            <div id="wrongAns" class="ans">
+            <div id="rightAns9" class="ans">
                 87MM
             </div>
-            <div id="rightAns9" class="ans">
+            <div id="wrongAns" class="ans">
                 oioi
             </div>
             <div id="wrongAns" class="ans">
@@ -182,19 +182,19 @@
     </div>
 
     <div id="q10">
-        <div id="qs">歐美</div> 
+        <div id="qs">adidas創立於哪個國家?</div> 
          <div id="ans10">
             <div id="wrongAns" class="ans">
-                Offer Opinion Through Devices
+                英國
             </div>
             <div id="wrongAns" class="ans">
-                Orange On The Desk
+                法國
+            </div>
+            <div id="rightAns" class="ans">
+                美國
             </div>
             <div id="rightAns10" class="ans">
-                Outfit Of The Day
-            </div>
-            <div id="wrongAns" class="ans">
-                Outlook On The Design
+                德國
             </div>
         </div>
     </div>
