--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
     </div>
 
     <div id="q3">
-        <div id="qs">Chanel創立於哪個國家?</div> 
+        <div id="qs">Chanel創立於哪個國家?<br>
+            <img src="pic/chanel.jpg" alt="1987" class="pic">
+        </div> 
          <div id="ans3">
             <div id="wrongAns" class="ans">
                 義大利
