--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
         <div id="scr9"><img src="pic/9.png" alt="scr9" class="center"></div>
         <div id="scr10"><img src="pic/10.png" alt="scr10" class="center"></div>
         
-        <a href="https://www.hashtagootd.com/" target="_blank"><div id="toootd" class="btn">到#OoTd看答案解析</div></a>
+        <a href="https://www.hashtagootd.com/services-6" target="_blank"><div id="toootd" class="btn">到#OoTd看答案解析</div></a>
         <a href="https://www.instagram.com/hashtag.ootd2021/" target="_blank"><div id="toootd" class="btn">到instagram取得服裝店折扣碼</div></a>
         <div id="backHome" class="btn">再玩一次</div>
     </div>
